--- a/FinalProject/main.ipynb
+++ b/FinalProject/main.ipynb
@@ -300,6 +300,27 @@
     "dt = datetime.fromtimestamp(1673961830.631699)\n",
     "dt.strftime('%Y-%m-%d %H:%M:%S')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'D:\\\\dir_to_sync\\\\depth'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "path = \"D:\\\\dir_to_sync\\\\depth\\\\2014-1_120-145.pdf\"\n",
+    "os.path.dirname(path)"
+   ]
   }
  ],
  "metadata": {
