--- a/labTempFile.ipynb
+++ b/labTempFile.ipynb
@@ -50,7 +50,7 @@
      "output_type": "stream",
      "text": [
       "rb+\n",
-      "C:\\Users\\Admin\\AppData\\Local\\Temp\\tmp6dia93_x\n"
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\tmpgn8lay8k\n"
      ]
     }
    ],
@@ -70,7 +70,7 @@
      "output_type": "stream",
      "text": [
       "rt+\n",
-      "C:\\Users\\Admin\\AppData\\Local\\Temp\\tmp9g2156lj\n"
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\tmpb3jpp3k_\n"
      ]
     }
    ],
@@ -89,7 +89,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Admin\\AppData\\Local\\Temp\\tmp9w8cwddt\n"
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\tmpk5gc2mtk\n"
      ]
     }
    ],
@@ -108,7 +108,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Admin\\AppData\\Local\\Temp\\___bjsjmkmvzzz\n"
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\___hgo5pn4szzz\n"
      ]
     }
    ],
@@ -119,18 +119,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
-     "ename": "PermissionError",
-     "evalue": "[Errno 13] Permission denied: 'C:\\\\Users\\\\Admin\\\\AppData\\\\Local\\\\Temp\\\\tmplpm_0lzu'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mPermissionError\u001b[0m                           Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [11], line 11\u001b[0m\n\u001b[0;32m      7\u001b[0m tempfile\u001b[39m.\u001b[39mTemporaryFile()\n\u001b[0;32m      9\u001b[0m file \u001b[39m=\u001b[39m tempfile\u001b[39m.\u001b[39mTemporaryFile()\n\u001b[1;32m---> 11\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(file_cities_csv) \u001b[39mas\u001b[39;00m r, \u001b[39mopen\u001b[39;49m(file\u001b[39m.\u001b[39;49mname) \u001b[39mas\u001b[39;00m w:\n\u001b[0;32m     12\u001b[0m     reader \u001b[39m=\u001b[39m csv\u001b[39m.\u001b[39mDictReader(r, delimiter\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m;\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m     13\u001b[0m     cities \u001b[39m=\u001b[39m []\n",
-      "\u001b[1;31mPermissionError\u001b[0m: [Errno 13] Permission denied: 'C:\\\\Users\\\\Admin\\\\AppData\\\\Local\\\\Temp\\\\tmplpm_0lzu'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Урень\n",
+      "Углегорск\n",
+      "ПалласовкаНовоалтайск\n",
+      "Мирный\n",
+      "Лагань\n",
+      "Краснослободск\n",
+      "Кольчугино\n",
+      "ВеликийУстюг\n",
+      "Аксай\n",
+      "\n"
      ]
     }
    ],
@@ -139,35 +144,48 @@
     "# а затем из этого файла создать другой файл, \n",
     "# но уже с этими отсортированными в обратном алфавитном порядке городами. \n",
     "# Результат вывести в консоль для проверки.\n",
-    "\n",
+    "from pathlib import Path\n",
     "TEMP_DIR = 'temp'\n",
     "file_cities_csv = os.path.join(TEMP_DIR, \"cities.csv\")\n",
-    "tempfile.TemporaryFile()\n",
+    "dir = tempfile.TemporaryDirectory()\n",
     "\n",
     "file = tempfile.TemporaryFile()\n",
+    "file = os.path.join(dir.name,file.name)\n",
+    "Path.touch(Path(file))\n",
     "\n",
-    "with open(file_cities_csv) as r, open(file.name, 'w') as w:\n",
+    "with open(file_cities_csv) as r, open(file, 'w') as w:\n",
     "    reader = csv.DictReader(r, delimiter=';')\n",
     "    cities = []\n",
     "    for line in reader:\n",
-    "        cities.append(line['city'])\n",
+    "        cities.append(line['Город'])\n",
     "    random_cities = random.choices(cities,k=10)\n",
-    "    w.writelines(random_cities)\n",
+    "    w.write('\\n'.join(random_cities))\n",
     "    \n",
-    "with open(file.name) as r, open('final_file.txt', 'w') as w:\n",
+    "with open(file) as r, open('final_file.txt', 'w',encoding='utf-8') as w:\n",
     "    cities = r.readlines()\n",
     "    cities.sort(reverse=True)\n",
-    "    w.write(cities)\n",
-    "    print(cities)\n",
+    "    w.writelines(cities)\n",
+    "\n",
+    "with open('final_file.txt',encoding='utf-8') as f:\n",
+    "    print(f.read())\n",
     "        \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Количество городов в файле temp\\cities.csv: 1082\n",
+      "Количество файлов в директории C:\\Users\\Admin\\AppData\\Local\\Temp\\tmpus0c7jf0: 1063\n"
+     ]
+    }
+   ],
    "source": [
     "# Создать временный каталог, в котором создать N текстовых файлов, \n",
     "# имя файла должно содержать название города из файла cities.csv  (Например, \"Москва.txt\", \"Тула.txt\") , \n",
@@ -183,12 +201,12 @@
     "    reader = csv.DictReader(r,delimiter=';')\n",
     "    \n",
     "    for line in reader:\n",
-    "        file = os.path.join(dir,f\"{line['Город']}.txt\")\n",
+    "        file = os.path.join(dir.name,f\"{line['Город']}.txt\")\n",
     "        Path.touch(Path(file))\n",
     "        cities.append(line['Город'])\n",
     "        \n",
     "print(f'Количество городов в файле {file_cities_csv}: {len(cities)}')\n",
-    "print(f'Количество файлов в директории {dir}: {len(os.listdir(dir))}')  "
+    "print(f'Количество файлов в директории {dir.name}: {len(os.listdir(dir.name))}')  "
    ]
   },
   {
