--- a/FinalProject/main.ipynb
+++ b/FinalProject/main.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<generator object _walk at 0x000001DCC03D2F90>\n"
+      "<generator object _walk at 0x000001D32200CDD0>\n"
      ]
     }
    ],
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -320,6 +320,469 @@
    "source": [
     "path = \"D:\\\\dir_to_sync\\\\depth\\\\2014-1_120-145.pdf\"\n",
     "os.path.dirname(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------------------+---------+--------------+----------------+---------+-------------------------------------------------------+---------------------+---------------------+---------------------+\n",
+      "|      sync_time      | sync_id |    source    |  destination   | file_id |                        filename                       |        stmode       |        mtime        |        ctime        |\n",
+      "+---------------------+---------+--------------+----------------+---------+-------------------------------------------------------+---------------------+---------------------+---------------------+\n",
+      "| 2023-01-17 15:17:18 |    1    | D:\\test_sync | D:\\dir_to_sync |    1    |        D:\\test_sync\\Bahh Tee - Одна история.mp3       | 1970-01-01 12:13:26 | 2023-01-14 21:06:21 | 2023-01-17 17:39:41 |\n",
+      "| 2023-01-17 15:17:18 |    1    | D:\\test_sync | D:\\dir_to_sync |    2    | D:\\test_sync\\depth\\depth2\\Bahh Tee - Одна история.mp3 | 1970-01-01 12:13:26 | 2023-01-14 21:06:21 | 2023-01-17 17:54:40 |\n",
+      "| 2023-01-17 15:17:18 |    1    | D:\\test_sync | D:\\dir_to_sync |    3    |                D:\\test_sync\\Текст.docx                | 1970-01-01 12:13:26 | 2023-01-14 17:17:58 | 2023-01-17 17:39:41 |\n",
+      "| 2023-01-17 15:17:41 |    1    | D:\\test_sync | D:\\dir_to_sync |    4    |         D:\\test_sync\\depth\\2014-1_120-145.pdf         | 1970-01-01 12:13:26 | 2023-01-13 10:32:17 | 2023-01-17 17:39:41 |\n",
+      "+---------------------+---------+--------------+----------------+---------+-------------------------------------------------------+---------------------+---------------------+---------------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sqlite3\n",
+    "from prettytable import PrettyTable\n",
+    "import contextlib\n",
+    "\n",
+    "# достать полную информацию о синхронизации по id\n",
+    "query = '''\n",
+    "    SELECT sync_time,sync_id, source_path, destination_path, file_id, filename, stmode, mtime, ctime FROM synchronize_info s\n",
+    "    left join file_info f\n",
+    "    on s.file_id = f.id \n",
+    "    where s.sync_id = 1;\n",
+    "'''\n",
+    "\n",
+    "table = PrettyTable()\n",
+    "table.field_names = ['sync_time', 'sync_id', 'source', 'destination', 'file_id', 'filename', 'stmode', 'mtime', 'ctime']\n",
+    "\n",
+    "with contextlib.closing(sqlite3.connect('test.db')) as con:\n",
+    "    with con as cursor:\n",
+    "        data = cursor.execute(query).fetchall()\n",
+    "        \n",
+    "table.add_rows(data)\n",
+    "\n",
+    "print(table)\n",
+    "        \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------+\n",
+      "|    source    |\n",
+      "+--------------+\n",
+      "| D:\\test_sync |\n",
+      "+--------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "# достать все пути, из которых происходила синхронизация\n",
+    "query = '''\n",
+    "    SELECT distinct source_path from synchronize_info\n",
+    "'''\n",
+    "\n",
+    "table = PrettyTable()\n",
+    "table.field_names = ['source']\n",
+    "\n",
+    "with contextlib.closing(sqlite3.connect('test.db')) as con:\n",
+    "    with con as cursor:\n",
+    "        data = cursor.execute(query).fetchall()\n",
+    "        \n",
+    "table.add_rows(data)\n",
+    "\n",
+    "print(table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------+----------------+\n",
+      "|    source    |  destination   |\n",
+      "+--------------+----------------+\n",
+      "| D:\\test_sync | D:\\dir_to_sync |\n",
+      "+--------------+----------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "# достать все пути источник -> назначение, синхронизация которых происходила\n",
+    "query = '''\n",
+    "    SELECT distinct source_path, destination_path from synchronize_info\n",
+    "'''\n",
+    "\n",
+    "table = PrettyTable()\n",
+    "table.field_names = ['source', 'destination']\n",
+    "\n",
+    "with contextlib.closing(sqlite3.connect('test.db')) as con:\n",
+    "    with con as cursor:\n",
+    "        data = cursor.execute(query).fetchall()\n",
+    "        \n",
+    "table.add_rows(data)\n",
+    "\n",
+    "print(table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3 достать все пути источник -> назначение, синхронизация которых происходила\n",
+    "query = '''\n",
+    "    SELECT distinct source_path, destination_path from synchronize_info\n",
+    "'''\n",
+    "\n",
+    "table = PrettyTable()\n",
+    "table.field_names = ['source', 'destination']\n",
+    "\n",
+    "with contextlib.closing(sqlite3.connect('test.db')) as con:\n",
+    "    with con as cursor:\n",
+    "        data = cursor.execute(query).fetchall()\n",
+    "        \n",
+    "table.add_rows(data)\n",
+    "\n",
+    "print(table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------------------------------------------+\n",
+      "|                        filename                       |\n",
+      "+-------------------------------------------------------+\n",
+      "|        D:\\test_sync\\Bahh Tee - Одна история.mp3       |\n",
+      "| D:\\test_sync\\depth\\depth2\\Bahh Tee - Одна история.mp3 |\n",
+      "|                D:\\test_sync\\Текст.docx                |\n",
+      "|         D:\\test_sync\\depth\\2014-1_120-145.pdf         |\n",
+      "+-------------------------------------------------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4 достать все синхронизированные файлы\n",
+    "query = '''\n",
+    "    SELECT distinct filename from file_info\n",
+    "'''\n",
+    "\n",
+    "table = PrettyTable()\n",
+    "table.field_names = ['filename']\n",
+    "\n",
+    "with contextlib.closing(sqlite3.connect('test.db')) as con:\n",
+    "    with con as cursor:\n",
+    "        data = cursor.execute(query).fetchall()\n",
+    "        \n",
+    "table.add_rows(data)\n",
+    "\n",
+    "print(table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------+----------------+\n",
+      "|    source    |  destination   |\n",
+      "+--------------+----------------+\n",
+      "| D:\\test_sync | D:\\dir_to_sync |\n",
+      "+--------------+----------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 5 достать все синхронизации, дата которых позже чем 15.01.2023\n",
+    "query = '''\n",
+    "    SELECT distinct source_path, destination_path from synchronize_info\n",
+    "    where sync_time > '2023-01-15'\n",
+    "'''\n",
+    "\n",
+    "table = PrettyTable()\n",
+    "table.field_names = ['source','destination']\n",
+    "\n",
+    "with contextlib.closing(sqlite3.connect('test.db')) as con:\n",
+    "    with con as cursor:\n",
+    "        data = cursor.execute(query).fetchall()\n",
+    "        \n",
+    "table.add_rows(data)\n",
+    "\n",
+    "print(table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+-------------+\n",
+      "| sync_id | files count |\n",
+      "+---------+-------------+\n",
+      "|    1    |      4      |\n",
+      "+---------+-------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 6 достать количество синхронизируемых файлов для каждой синхронизации\n",
+    "query = '''\n",
+    "    SELECT sync_id, count(*) from synchronize_info\n",
+    "    group by sync_id\n",
+    "'''\n",
+    "\n",
+    "table = PrettyTable()\n",
+    "table.field_names = ['sync_id','files count']\n",
+    "\n",
+    "with contextlib.closing(sqlite3.connect('test.db')) as con:\n",
+    "    with con as cursor:\n",
+    "        data = cursor.execute(query).fetchall()\n",
+    "        \n",
+    "table.add_rows(data)\n",
+    "\n",
+    "print(table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------------------------------------+\n",
+      "|                 filename                 |\n",
+      "+------------------------------------------+\n",
+      "| D:\\test_sync\\Bahh Tee - Одна история.mp3 |\n",
+      "+------------------------------------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 7 достать последний измененный файл из синхронизации\n",
+    "query = '''\n",
+    "    SELECT filename FROM synchronize_info s\n",
+    "    left join file_info f\n",
+    "    on s.file_id = f.id \n",
+    "    group by sync_id\n",
+    "    having mtime = max(mtime)\n",
+    "'''\n",
+    "\n",
+    "table = PrettyTable()\n",
+    "table.field_names = ['filename']\n",
+    "\n",
+    "with contextlib.closing(sqlite3.connect('test.db')) as con:\n",
+    "    with con as cursor:\n",
+    "        data = cursor.execute(query).fetchall()\n",
+    "        \n",
+    "table.add_rows(data)\n",
+    "\n",
+    "print(table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 7 достать последний измененный файл из синхронизации\n",
+    "query = '''\n",
+    "    SELECT filename FROM synchronize_info s\n",
+    "    left join file_info f\n",
+    "    on s.file_id = f.id \n",
+    "    group by sync_id\n",
+    "    having mtime = max(mtime)\n",
+    "'''\n",
+    "\n",
+    "table = PrettyTable()\n",
+    "table.field_names = ['filename']\n",
+    "\n",
+    "with contextlib.closing(sqlite3.connect('test.db')) as con:\n",
+    "    with con as cursor:\n",
+    "        data = cursor.execute(query).fetchall()\n",
+    "        \n",
+    "table.add_rows(data)\n",
+    "\n",
+    "print(table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------------------------------------------+-----+\n",
+      "|                        filename                       | len |\n",
+      "+-------------------------------------------------------+-----+\n",
+      "|        D:\\test_sync\\Bahh Tee - Одна история.mp3       |  40 |\n",
+      "|         D:\\test_sync\\depth\\2014-1_120-145.pdf         |  37 |\n",
+      "| D:\\test_sync\\depth\\depth2\\Bahh Tee - Одна история.mp3 |  53 |\n",
+      "|                D:\\test_sync\\Текст.docx                |  23 |\n",
+      "+-------------------------------------------------------+-----+\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 8 получить длину всех путей к файлам\n",
+    "query = '''\n",
+    "    SELECT filename, max(length(filename)) as length\n",
+    "    from file_info f\n",
+    "    group by filename\n",
+    "'''\n",
+    "\n",
+    "table = PrettyTable()\n",
+    "table.field_names = ['filename', 'len']\n",
+    "\n",
+    "with contextlib.closing(sqlite3.connect('test.db')) as con:\n",
+    "    with con as cursor:\n",
+    "        data = cursor.execute(query).fetchall()\n",
+    "        \n",
+    "table.add_rows(data)\n",
+    "\n",
+    "print(table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------------------------------------------+-----+\n",
+      "|                        filename                       | len |\n",
+      "+-------------------------------------------------------+-----+\n",
+      "|        D:\\test_sync\\Bahh Tee - Одна история.mp3       |  40 |\n",
+      "|         D:\\test_sync\\depth\\2014-1_120-145.pdf         |  37 |\n",
+      "| D:\\test_sync\\depth\\depth2\\Bahh Tee - Одна история.mp3 |  53 |\n",
+      "|                D:\\test_sync\\Текст.docx                |  23 |\n",
+      "+-------------------------------------------------------+-----+\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 9 получить самый длинный путь к фалу\n",
+    "query = '''\n",
+    "select filename, max(l) as max_length from (\n",
+    "\tselect \n",
+    "\t\tfilename, \n",
+    "\t\tlength(filename) as l\n",
+    "\tfrom file_info f\n",
+    ")\n",
+    "'''\n",
+    "\n",
+    "table = PrettyTable()\n",
+    "table.field_names = ['filename', 'len']\n",
+    "\n",
+    "with contextlib.closing(sqlite3.connect('test.db')) as con:\n",
+    "    with con as cursor:\n",
+    "        data = cursor.execute(query).fetchall()\n",
+    "        \n",
+    "table.add_rows(data)\n",
+    "\n",
+    "print(table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+---------------------+\n",
+      "| sync_id |      sync_time      |\n",
+      "+---------+---------------------+\n",
+      "|    1    | 2023-01-18 22:50:57 |\n",
+      "|    1    | 2023-01-18 22:50:57 |\n",
+      "|    1    | 2023-01-18 22:50:57 |\n",
+      "|    1    | 2023-01-18 22:50:56 |\n",
+      "+---------+---------------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 10 отсортировать синхронизации в порядке убывания\n",
+    "query = '''\n",
+    "    SELECT sync_id, sync_time FROM synchronize_info s\n",
+    "    left join file_info f\n",
+    "    on s.file_id = f.id \n",
+    "\tORDER BY sync_time DESC\n",
+    "'''\n",
+    "\n",
+    "table = PrettyTable()\n",
+    "table.field_names = ['sync_id', 'sync_time']\n",
+    "\n",
+    "with contextlib.closing(sqlite3.connect('test.db')) as con:\n",
+    "    with con as cursor:\n",
+    "        data = cursor.execute(query).fetchall()\n",
+    "        \n",
+    "table.add_rows(data)\n",
+    "\n",
+    "print(table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name '__file__' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [1], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mos\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpath\u001b[39;00m \u001b[39mimport\u001b[39;00m abspath\n\u001b[1;32m----> 3\u001b[0m \u001b[39mprint\u001b[39m(abspath(\u001b[39m__file__\u001b[39;49m))\n",
+      "\u001b[1;31mNameError\u001b[0m: name '__file__' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "from os.path import abspath\n",
+    "\n",
+    "print(abspath(__file__))"
    ]
   }
  ],
@@ -339,7 +802,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.6 (tags/v3.9.6:db3ff76, Jun 28 2021, 15:26:21) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
